--- a/spring-cloud-docker-in-action/e-book/e-book-consumer-order/src/main/resources/application.yml
+++ b/spring-cloud-docker-in-action/e-book/e-book-consumer-order/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://eureka:3306/eureka/
 
 ribbon:
   MaxAutoRetries: 2
