--- a/spring-cloud-docker-in-action/e-book/e-book-user/e-book-user-core/src/main/resources/application.yml
+++ b/spring-cloud-docker-in-action/e-book/e-book-user/e-book-user-core/src/main/resources/application.yml
@@ -14,7 +14,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://eureka:3306/eureka/
 
 management:
   endpoint:
