--- a/spring-cloud-docker-in-action/settings.gradle
+++ b/spring-cloud-docker-in-action/settings.gradle
@@ -12,3 +12,5 @@ include "e-book:e-book-trade:e-book-trade-api"
 include "e-book:e-book-trade:e-book-trade-core"
 
 include 'e-book:e-book-consumer-order'
+
+include 'e-book:zuul-gateway'
