--- a/spring-cloud-docker-in-action/settings.gradle
+++ b/spring-cloud-docker-in-action/settings.gradle
@@ -14,3 +14,4 @@ include "e-book:e-book-trade:e-book-trade-core"
 include 'e-book:e-book-consumer-order'
 
 include 'e-book:zuul-gateway'
+include 'e-book:config-server'
