--- a/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
     implementation "org.springframework.boot:spring-boot-starter-web"
 
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
