--- a/spring-cloud-docker-in-action/e-book/e-book-trade/e-book-trade-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-trade/e-book-trade-core/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
 
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
