--- a/spring-cloud-docker-in-action/e-book/e-book-user/e-book-user-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-user/e-book-user-core/build.gradle
@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation 'org.springframework.cloud:spring-cloud-config-client'
 
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
