--- a/spring-cloud-docker-in-action/e-book/zuul-gateway/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/zuul-gateway/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
 }
 
 dependencyManagement {
