--- a/spring-cloud-docker-in-action/e-book/zuul-gateway/src/main/resources/application.yml
+++ b/spring-cloud-docker-in-action/e-book/zuul-gateway/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: zuul-gateway
+  zipkin:
+    baseUrl: "http://zipkin:9411/"
+  sleuth:
+    sampler:
+      probability: 1.0
 
 server:
   port: 9010
