--- a/spring-cloud-docker-in-action/e-book/e-book-consumer-order/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-consumer-order/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
 
     api project(':e-book:e-book-product:e-book-product-api')
     api project(':e-book:e-book-user:e-book-user-api')
