--- a/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
@@ -4,9 +4,11 @@ plugins {
 }
 
 dependencies {
+    implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-config-client'
-    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
 
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
