--- a/spring-cloud-docker-in-action/e-book/e-book-trade/e-book-trade-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-trade/e-book-trade-core/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
     implementation 'org.springframework.cloud:spring-cloud-config-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
 
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
