--- a/spring-cloud-docker-in-action/e-book/e-book-consumer-order/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-consumer-order/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
 
+    implementation "net.logstash.logback:logstash-logback-encoder:6.2"
+
     api project(':e-book:e-book-product:e-book-product-api')
     api project(':e-book:e-book-user:e-book-user-api')
     api project(':e-book:e-book-order:e-book-order-api')
