--- a/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
+++ b/spring-cloud-docker-in-action/e-book/e-book-product/e-book-product-core/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0"
     implementation "mysql:mysql-connector-java:${mysqlVersion}"
 
+    implementation "net.logstash.logback:logstash-logback-encoder:6.2"
+
     api project(':e-book:e-book-product:e-book-product-api')
 }
 
